#
# Lexer and Parser Generation Objects
#

noinst_LIBRARIES = \
	libxparser.a

libxparser_a_SOURCES = \
	xparser.h \
	Lexer.h \
	GLexer.h \
	GLexer.cc \
	GParser.h \
	GParser.cc \
	LexToken.h \
	LexToken.cc \
	SynSym.h \
	SynSym.cc \
	SynSymTbl.h \
	SynSymTbl.cc \
	TokenSym.h \
	TokenSym.cc \
	ParsSym.h \
	ParsSym.cc



include $(top_srcdir)/common.am
