#
# Standard Library
#

noinst_LIBRARIES = \
	libxstd.a

libxstd_a_SOURCES = \
	xstd.h \
	\
	AlarmClock.h \
	AlarmClock.cc \
	Assert.h \
	Assert.cc \
	BigSize.h \
	BigSize.cc \
	Clock.h \
	Clock.cc \
	ResourceUsage.h \
	ResourceUsage.cc \
	Checksum.h \
	Checksum.cc \
	TokenIdentifier.h \
	TokenIdentifier.cc \
	PrefixIdentifier.h \
	PrefixIdentifier.cc \
	StringIdentifier.h \
	StringIdentifier.cc \
	\
	Error.h \
	Error.cc \
	\
	NetDouble.h \
	NetDouble.cc \
	NetAddr.h \
	NetAddr.cc \
	NetIface.h \
	NetIface.cc \
	InetIfReq.h \
	InetIfReq.cc \
	InAddress.h \
	InAddress.cc \
	getIfAddrs.h \
	getIfAddrs.cc \
	\
	FileScanner.h \
	FileScanner.cc \
	Poll.h \
	Poll.cc \
	Epoll.h \
	Epoll.cc \
	RegEx.h \
	RegEx.cc \
	Rnd.h \
	Rnd.cc \
	Select.h \
	Select.cc \
	Size.h \
	Size.cc \
	Socket.h \
	Socket.cc \
	IpSocket.h \
	IpSocket.cc \
	SrcLoc.h \
	SrcLoc.cc \
	String.h \
	String.cc \
	Area.h \
	Area.cc \
	TblDistr.h \
	TblDistr.cc \
	Time.h \
	Time.cc \
	\
	LoadableModule.h \
	LoadableModule.cc \
	\
	Dns.h \
	Dns.cc \
	Ssl.h \
	Ssl.cc \
	\
	ZLib.h \
	ZLib.cc \
	\
	Array.h \
	Future.h \
	Heap.h \
	History.h \
	Map.h \
	Queue.h \
	Ring.h \
	\
	Interval.h \
	LibInit.h \
	\
	FNVHash.h \
	gadgets.h \
	gadgets.cc \
	rndDistrs.h \
	rndDistrs.cc \
	xport.h \
	xport.cc \
	\
	\
	h/net/if.h \
	\
	h/sys/ioctl.h \
	h/sys/resource.h \
	h/sys/socket.h \
	h/sys/sockio.h \
	h/sys/types.h \
	\
	h/dlfcn.h \
	h/errno.h \
	h/fcntl.h \
	h/iomanip.h \
	h/iosfwd.h \
	h/iostream.h \
	h/math.h \
	h/netdb.h \
	h/netinet.h \
	h/new.h \
	h/os_std.h \
	h/poll.h \
	h/epoll.h \
	h/process.h \
	h/regex.h \
	h/signal.h \
	h/string.h \
	h/time.h \
	h/sstream.h

DISTCLEANFILES = h/stdint.h


include $(top_srcdir)/common.am
